# pineforge-corpus

./: .gitignore  CMakeLists.txt  LEGAL.md  NOTICE  README.md  validation_report.html  validation_report.md
basic/greedy/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
basic/inside-bar/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
basic/keltner/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
basic/ma-cros/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
basic/parabolic-asr/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
basic/pivot-ext/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
basic/stochastic-slow/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
basic/supertrend/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
basic/volty-expan/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/4ema_rsi/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/BOS_curv/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/IES/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/KKB/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/LiquitySweep/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/MarketShift/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/VCP/: engine_trades.csv  generated.cpp  inputs.json  strategy.pine  tv_trades.csv
community/kanuck/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/scalping-strategy/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/scalping-wunder-bots/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
community/trendmaster/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
data/: ohlcv_ETH-USDT-USDT_15m.csv  ohlcv_ETH-USDT-USDT_15m_warmup6m.csv
parity-anomalies/: README.md
parity-anomalies/equity-mirror/: inputs.json  strategy.pine
special-validation/: .gitignore  README.md  build.sh  build_specials.sh  make_feed.py
validation/01-macd-histogram/: engine_trades.csv  generated.cpp  strategy.pine
validation/02-bb-squeeze/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/03-dmi-adx-trend/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/04-stoch-rsi/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/05-hma-cross/: engine_trades.csv  generated.cpp  strategy.pine
validation/06-cci-momentum/: engine_trades.csv  generated.cpp  strategy.pine
validation/07-tsi-signal/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/08-linreg-channel/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/09-aroon-oscillator/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/10-donchian-breakout/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/100-ma-dual-cross/: engine_trades.csv  strategy.pine
validation/102-pivot-extension-break/: engine_trades.csv
validation/103-stochastic-slow-cross/: strategy.pine
validation/104-supertrend-flip/: strategy.pine
validation/105-volty-expansion-close/: engine_trades.csv
validation/11-elder-ray/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/12-chandelier-exit/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/13-atr-trailing-stop/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/14-vwma-divergence/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/15-momentum-roc/: engine_trades.csv  generated.cpp  strategy.pine
validation/16-mean-reversion-bb/: engine_trades.csv  generated.cpp  strategy.pine
validation/17-dual-ma-switch/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/18-ema-ribbon-loop/: engine_trades.csv  generated.cpp  strategy.pine
validation/19-pivot-array-breakout/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/20-range-filter-while/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/21-adaptive-ma-func/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/22-candle-pattern/: engine_trades.csv  generated.cpp  strategy.pine  tv_trades.csv
validation/23-dual-thrust/: engine_trades.csv  generated.cpp  (+2 more)
validation_lower_tf/: README.md
validation_ta_isolate/: README.md
(+1454 files in other folders)
